
noinst_PROGRAMS = hanoi_v1 hanoi_v1_bis hanoi_v1_ter hanoi_v2 hanoi_v3 hanoi_v4 hanoi_v5 hanoi_v6 hanoi_v7 hanoi_v8 hanoi_v9

DDD_SRCDIR = $(top_srcdir)/src
DDD_BUILDDIR = $(top_builddir)/src

AM_CPPFLAGS =  -I $(DDD_SRCDIR) -g -Wall
LDADD = $(DDD_BUILDDIR)/libDDD_d.a
# AM_LDFLAGS = -ltbb

# AM_CPPFLAGS = -D INST_STL -I $(DDD_SRCDIR)
# LDADD = $(DDD_BUILDDIR)/libDDD_i.a

hanoi_v1_SOURCES = hanoi_v1.cpp
hanoi_v1_bis_SOURCES = hanoi_v1_bis.cpp
hanoi_v1_ter_SOURCES = hanoi_v1_ter.cpp
hanoi_v2_SOURCES = hanoi_v2.cpp
hanoi_v3_SOURCES = hanoi_v3.cpp
hanoi_v4_SOURCES = hanoi_v4.cpp
hanoi_v5_SOURCES = hanoi_v5.cpp
hanoi_v6_SOURCES = hanoi_v6.cpp
hanoi_v7_SOURCES = hanoi_v7.cpp
hanoi_v8_SOURCES = hanoi_v8.cpp
hanoi_v9_SOURCES = hanoi_v9.cpp

